tests/rosetta/out/Smalltalk/circles-of-given-radius-through-two-points.out
/tmp/circles-of-given-radius-through-two-points.st:6: parse error, expected ']'
